# stockist-dashboard

./: .gitignore  app.py  data_loader.py  formatters.py  pyproject.toml
.streamlit/: config.toml
views/: p1_home.py  p2_products.py  p3_counters.py  p4_receivables.py  p5_inventory.py
